package com.example.user.diplom_2.adapters;

public class CurrencyAdapter {
}
