@startuml

title __ADAPTERS's Class Diagram__\n

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class AttractItemAdapter {
          + AttractItemAdapter()
          + getView()
          + getDropDownView()
          - initView()
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class AttractionListAdapter {
          + AttractionListAdapter()
          + getView()
          + getDropDownView()
          + initView()
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class CountrySpinnerAdapter {
          + CountrySpinnerAdapter()
          + getView()
          + getDropDownView()
          - initView()
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class CurrencyAdapter {
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class LectionAdapter {
          - context : Context
          ~ lections : ArrayList<Lection>
          + LectionAdapter()
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class MyHolder {
          ~ lectionName : TextView
          ~ empty : TextView
          ~ lectionDone : CheckBox
          + MyHolder()
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class SubjectsAdapter {
          - context : Context
          - subjects : ArrayList<Subject>
          + SubjectsAdapter()
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class MyHolder {
          ~ image : ImageView
          ~ subjectName : TextView
          ~ subjectProgress : TextView
          ~ progress : ProgressBar
          + MyHolder()
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class WorkListAdapter {
          - context : Context
          ~ works : ArrayList<Wort>
          + WorkListAdapter()
          + onBindViewHolder()
          + getItemCount()
          + onCreateViewHolder()
      }
    }
  }
  

  package com.example.user.diplom_2 {
    package com.example.user.diplom_2.adapters {
      class MyHolder {
          ~ lectionName : TextView
          ~ empty : TextView
          ~ lectionDone : CheckBox
          + MyHolder()
      }
    }
  }
  

  AttractItemAdapter -up-|> ArrayAdapter
  AttractionListAdapter -up-|> ArrayAdapter
  CountrySpinnerAdapter -up-|> ArrayAdapter
  LectionAdapter -up-|> Adapter
  LectionAdapter +-down- MyHolder
  MyHolder -up-|> ViewHolder
  SubjectsAdapter -up-|> Adapter
  SubjectsAdapter +-down- MyHolder
  MyHolder -up-|> ViewHolder
  WorkListAdapter -up-|> Adapter
  WorkListAdapter +-down- MyHolder
  MyHolder -up-|> ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
